[package]
name = "kme-dbg"
version = "0.1.0"
edition = "2021"
authors = ["Davi Aguiar moraes@akmee.xyz"]
description = "Debugger yayy"
# license = "MIT"
readme = "README.md"
repository = "https://github.com/akamee666/kme-dbg"

# keywords = ["cli", "tracker", "spyware"]
# categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
iced-x86 = "1.21.0"
nix = { version = "0.29.0", features = ["ptrace"] }
thiserror = "2.0.11"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features = ["env-filter"]  }
# I'm yet to decide how i am going to do the GUI.
# eframe = { version = "0.30.0", features = ["default"] }
# egui_extras = { version = "0.30.0", features = ["default", "image"] }

